# arcana

./: .gitmodules  Cargo.toml  README.md
arcana-core/: Cargo.toml
arcana-core/example/: page.arct  template.arct
arcana-core/resources/: compile-other.arct  compile-page.arct  extended.txt  parse-include-1.txt  parse_attach.db  template.txt
arcana-core/resources/assert_not_eq_1/: test.arct
arcana-core/resources/call_compile_chain_1/: call_1.arct  call_2.arct  compile_1.arct  compile_2.arct  page.arct
arcana-core/resources/parse_add_1/: file.arct
arcana-core/resources/parse_add_2/: file.arct
arcana-core/resources/parse_add_3/: file.arct
arcana-core/resources/parse_assert_3/: test.arct
arcana-core/resources/parse_assert_4/: test.arct
arcana-core/resources/parse_assert_5/: test.arct
arcana-core/resources/parse_assert_6/: test.arct
arcana-core/resources/parse_basename_1/: page.arct
arcana-core/resources/parse_call_1/: call.arct  page.arct
arcana-core/resources/parse_complex_1/: page.arct  template.arct
arcana-core/resources/parse_complex_2/: header.arct  page.arct
arcana-core/resources/parse_complex_3/: page.arct
arcana-core/resources/parse_complex_4/: page.arct
arcana-core/resources/parse_complex_5/: base.arct
arcana-core/resources/parse_complex_6/: against.txt  allsiblings.arct  sibling.arct
arcana-core/src/: lib.rs
arcc/: Cargo.toml
arcc/resources/: help.txt
arcc/src/: main.rs
arcs/: Cargo.toml
arcs/example/: complete.html.arct  handle  test.html.arct
arcs/resources/: help.txt
arcs/src/: main.rs
(+110 files in other folders)
